--- a/lab2_to_check.ipynb
+++ b/lab2_to_check.ipynb
@@ -6,7 +6,7 @@
       "name": "lab2_to_check.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMjH7nxE5CMkA5Cah7y8ELl",
+      "authorship_tag": "ABX9TyNFKrjzEe/crBIkVw/8o8t2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,13 +91,13 @@
         "import numpy as np\n",
         "import cv2\n",
         "\n",
-        "def calculateValue(padded_img, filter, i, j):\n",
-        "\th, w = filter.shape\n",
+        "def calculateValue(image, filter, i, j):\n",
+        "\timg_h, img_w = filter.shape\n",
         "\tsum = 0\n",
-        "\tfor k in range(h):\n",
+        "\tfor k in range(img_h):\n",
         "\t\tnew_j = j\n",
-        "\t\tfor l in range(w):\n",
-        "\t\t\tsum = sum + (filter[k][l] * padded_img[i][new_j])\n",
+        "\t\tfor l in range(img_w):\n",
+        "\t\t\tsum = sum + (filter[k][l] * image[i][new_j])\n",
         "\t\t\tnew_j = new_j + 1\n",
         "\t\ti = i + 1\n",
         "\treturn sum\n"
@@ -125,8 +125,8 @@
         "\timg_copy = image.copy()\n",
         "\n",
         "  # want the size to be the same\n",
-        "\tfor i in range(img_height):\n",
-        "\t\tfor j in range(img_width):\n",
+        "\tfor i in range(h):\n",
+        "\t\tfor j in range(w):\n",
         "\t\t\timg_copy[i][j] = calculateValue(new_img, flipped_f, i, j)\n",
         "\n",
         "\treturn img_copy"
@@ -261,12 +261,12 @@
       "source": [
         "import math\n",
         "\n",
-        "def addMaxPooling2x2(inputImage, result):\n",
-        "  img_h, img_w, img_c = inputImage.shape\n",
+        "def addMaxPooling2x2(image, result):\n",
+        "  img_h, img_w, img_c = image.shape\n",
         "\n",
         "  for j in range(int(img_h/2)):\n",
         "      for i in range(int(img_w/2)):\n",
-        "          result[j][i] = np.maximum(np.maximum(inputImage[j*2][i*2],inputImage[j*2][i*2+1]),np.maximum(inputImage[j*2+1][i*2],inputImage[j*2+1][i*2+1]))\n",
+        "          result[j][i] = np.maximum(np.maximum(image[j*2][i*2],image[j*2][i*2+1]),np.maximum(image[j*2+1][i*2],image[j*2+1][i*2+1]))\n",
         "\n",
         "  print('Output size: (', int(img_h/2),',', int(img_w/2),',', img_c, ')')\n",
         "  return result"
