--- a/lab2_to_check.ipynb
+++ b/lab2_to_check.ipynb
@@ -6,7 +6,7 @@
       "name": "lab2_to_check.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNFKrjzEe/crBIkVw/8o8t2",
+      "authorship_tag": "ABX9TyOqJGmduzwpLOWCqlYdyMuw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
           "height": 265
         },
         "id": "W_UyhiVc-qGH",
-        "outputId": "49d9b603-6460-448f-b233-1d47c65f0bfe"
+        "outputId": "52fc2ba9-ae42-400c-88b0-72c1a923d6d5"
       },
       "source": [
         "import torch, matplotlib\n",
@@ -58,7 +58,7 @@
         "  \n",
         "display_image(img)"
       ],
-      "execution_count": 224,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +102,7 @@
         "\t\ti = i + 1\n",
         "\treturn sum\n"
       ],
-      "execution_count": 242,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -125,13 +125,13 @@
         "\timg_copy = image.copy()\n",
         "\n",
         "  # want the size to be the same\n",
-        "\tfor i in range(h):\n",
-        "\t\tfor j in range(w):\n",
+        "\tfor i in range(img_height):\n",
+        "\t\tfor j in range(img_width):\n",
         "\t\t\timg_copy[i][j] = calculateValue(new_img, flipped_f, i, j)\n",
         "\n",
         "\treturn img_copy"
       ],
-      "execution_count": 249,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
           "height": 265
         },
         "id": "Oa7y_hacdS_X",
-        "outputId": "78bb4efa-1561-4a2b-898a-522b929980c1"
+        "outputId": "b959a549-f096-4386-f947-dcf46d19d1eb"
       },
       "source": [
         "image = imageio.imread(img_url)[:,:,:3]\n",
@@ -166,7 +166,7 @@
         "print('Image size: ', image.shape)\n",
         "display_image(image)\n"
       ],
-      "execution_count": 250,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,10 +205,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 265
+          "height": 248
         },
         "id": "3diS4fd2xSOr",
-        "outputId": "e28061d1-149a-4ad0-9550-4ee6ab283e42"
+        "outputId": "3e66a79f-151c-490f-e3e7-18261bde8efa"
       },
       "source": [
         "img_h, img_w, img_c = image.shape\n",
@@ -220,15 +220,8 @@
         "\n",
         "display_image(img_copy)"
       ],
-      "execution_count": 178,
+      "execution_count": 9,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Image size:  (588, 786, 3)\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -263,6 +256,7 @@
         "\n",
         "def addMaxPooling2x2(image, result):\n",
         "  img_h, img_w, img_c = image.shape\n",
+        "  # result = image.copy\n",
         "\n",
         "  for j in range(int(img_h/2)):\n",
         "      for i in range(int(img_w/2)):\n",
@@ -271,7 +265,7 @@
         "  print('Output size: (', int(img_h/2),',', int(img_w/2),',', img_c, ')')\n",
         "  return result"
       ],
-      "execution_count": 222,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -281,13 +275,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7GlkM7fW5F7U",
-        "outputId": "1abaffb0-6d08-4875-832b-51906b81a23f"
+        "outputId": "77e2181b-aa58-4241-f815-b96fb43a4529"
       },
       "source": [
         "print('Original size: ', img_copy.shape)\n",
-        "res = addMaxPooling2x2(img_copy, res)\n"
+        "img_h, img_w, img_c = img_copy.shape\n",
+        "result = np.zeros((int(img_h/2), int(img_w/2), 3), 'uint8')\n",
+        "res = addMaxPooling2x2(img_copy, result)\n"
       ],
-      "execution_count": 251,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
