--- a/lab2_to_check.ipynb
+++ b/lab2_to_check.ipynb
@@ -6,7 +6,7 @@
       "name": "lab2_to_check.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMon0aInWDRZCmRy0m51/nH",
+      "authorship_tag": "ABX9TyPsGGOwqdcVEPZo/kyldUrm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
           "height": 265
         },
         "id": "W_UyhiVc-qGH",
-        "outputId": "96abb9b2-2b98-433e-e0ac-1eb6a30de7fb"
+        "outputId": "37db2943-ffe9-4096-9029-0a6b246fce75"
       },
       "source": [
         "import torch, matplotlib\n",
@@ -57,7 +57,7 @@
         "  \n",
         "display_image(img)"
       ],
-      "execution_count": 46,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,21 +87,21 @@
         "id": "gB9e9mWJgAMt"
       },
       "source": [
-        "import numpy as np\n",
-        "import cv2\n",
+        "# import numpy as np\n",
+        "# import cv2\n",
         "\n",
-        "def calculateValue(image, filter, i, j):\n",
-        "\timg_h, img_w = filter.shape\n",
-        "\tsum = 0\n",
-        "\tfor k in range(img_h):\n",
-        "\t\tnew_j = j\n",
-        "\t\tfor l in range(img_w):\n",
-        "\t\t\tsum = sum + (filter[k][l] * image[i][new_j])\n",
-        "\t\t\tnew_j = new_j + 1\n",
-        "\t\ti = i + 1\n",
-        "\treturn sum\n"
+        "# def calculateValue(image, filter, i, j):\n",
+        "# \timg_h, img_w = filter.shape\n",
+        "# \tsum = 0\n",
+        "# \tfor k in range(img_h):\n",
+        "# \t\tnew_j = j\n",
+        "# \t\tfor l in range(img_w):\n",
+        "# \t\t\tsum = sum + (filter[k][l] * image[i][new_j])\n",
+        "# \t\t\tnew_j = new_j + 1\n",
+        "# \t\ti = i + 1\n",
+        "# \treturn sum\n"
       ],
-      "execution_count": 47,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -129,23 +129,7 @@
         "\n",
         "    return res"
       ],
-      "execution_count": 83,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LQaQ42BXONX8"
-      },
-      "source": [
-        "def all_work(image):\r\n",
-        "  img_height, img_width, img_ch = image.shape\r\n",
-        "  conv_filters = np.full((5, 3, 3, img_ch), 1/9, dtype=float)\r\n",
-        "  result = convolution3D(image, conv_filters)\r\n",
-        "\r\n",
-        "  return result"
-      ],
-      "execution_count": 84,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -155,15 +139,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oa7y_hacdS_X",
-        "outputId": "ba635d38-316c-4a71-d288-698bdbdad256"
+        "outputId": "d1cd2b82-fe82-4880-e059-5c3e219b7bb4"
       },
       "source": [
         "image = imageio.imread(img_url)[:,:,:3]\n",
-        "res = all_work(image)\n",
+        "img_height, img_width, img_ch = image.shape\n",
+        "\n",
+        "conv_filters = np.full((5, 3, 3, img_ch), 1/9, dtype=float)\n",
+        "res = convolution3D(image, conv_filters)\n",
+        "\n",
         "print('Image size: ', image.shape)\n",
         "print('Output size (Convolution): ', res.shape)\n"
       ],
-      "execution_count": 85,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,6 +182,7 @@
         "def ReLU(image):\n",
         "  img_height, img_width, img_ch = image.shape\n",
         "  res = np.zeros((img_height, img_width, img_ch), 'uint8')\n",
+        "  \n",
         "  for c in range(img_ch):\n",
         "    for i in range(img_height):\n",
         "      for j in range(img_width):\n",
@@ -203,7 +192,7 @@
         "\n",
         "res_ReLU = ReLU(res)\n"
       ],
-      "execution_count": 73,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -232,7 +221,7 @@
         "\n",
         "  return result"
       ],
-      "execution_count": 74,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -242,16 +231,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7GlkM7fW5F7U",
-        "outputId": "da108d95-2678-4999-be2f-66a2125f76c7"
+        "outputId": "7bf2d9bd-e896-4db1-aa78-d47d04f6062e"
       },
       "source": [
         "print('Original size: ', res_ReLU.shape)\n",
+        "\n",
         "img_h, img_w, img_c = res_ReLU.shape\n",
         "result = np.zeros((int(img_h/2), int(img_w/2), 5), 'uint8')\n",
         "res = addMaxPooling2x2(res_ReLU, result)\n",
+        "\n",
         "print('Output size (MaxPool): ', res.shape)\n"
       ],
-      "execution_count": 75,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,6 +252,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9SVYZUMJk5M3"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -286,7 +286,7 @@
         "\r\n",
         "#   image = cv2.merge((B,G,R))"
       ],
-      "execution_count": null,
+      "execution_count": 95,
       "outputs": []
     }
   ]
