--- a/lab2_to_check.ipynb
+++ b/lab2_to_check.ipynb
@@ -6,7 +6,7 @@
       "name": "lab2_to_check.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPsGGOwqdcVEPZo/kyldUrm",
+      "authorship_tag": "ABX9TyM50C5GdieUHgqkw8TXg8ZW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,11 +113,13 @@
         "def convolution3D(image, filters):  \n",
         "    img_height, img_width, img_ch = image.shape\n",
         "    N, filt_height, filt_width, filt_ch = filters.shape\n",
+        "\n",
         "    size_pad = 2\n",
+        "  \n",
         "    res = np.zeros((img_height, img_width, N), 'uint8')\n",
         "    image = np.pad(image, ((size_pad,size_pad),(size_pad,size_pad),(0,0)), 'constant')\n",
         "    bias = np.random.sample(5)\n",
-        "    img_copy = image.copy()\n",
+        "    # img_copy = image.copy()\n",
         "  \n",
         "    for ch in range(N):\n",
         "          for i in range(img_width):\n",
