--- a/lab2_to_check.ipynb
+++ b/lab2_to_check.ipynb
@@ -6,7 +6,7 @@
       "name": "lab2_to_check.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM50C5GdieUHgqkw8TXg8ZW",
+      "authorship_tag": "ABX9TyNiyM5z4tQySpo5QLX6E0c5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
         "  \n",
         "display_image(img)"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +101,7 @@
         "# \t\ti = i + 1\n",
         "# \treturn sum\n"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,18 +120,20 @@
         "    image = np.pad(image, ((size_pad,size_pad),(size_pad,size_pad),(0,0)), 'constant')\n",
         "    bias = np.random.sample(5)\n",
         "    # img_copy = image.copy()\n",
-        "  \n",
+        "\n",
+        "    # Corrections : must be summed over ALL channels of the 3x3x3 filter\n",
+        "    # ------------------------------\n",
         "    for ch in range(N):\n",
-        "          for i in range(img_width):\n",
-        "              for j in range(img_height):\n",
-        "                  res[j][i][ch] += bias[ch]\n",
-        "                  for x in range(filt_width):\n",
-        "                      for y in range(filt_height):\n",
-        "                          res[j][i][ch] += np.dot(image[j+y-1][i+x-1][:], filters[ch][y][x][:])\n",
+        "        for i in range(img_width):\n",
+        "            for j in range(img_height):\n",
+        "                res[j][i][ch] += bias[ch]\n",
+        "                for x in range(filt_width):\n",
+        "                    for y in range(filt_height):\n",
+        "                        res[j][i][ch] += np.dot(image[j+y-1][i+x-1][:], filters[ch][y][x][:])\n",
         "\n",
         "    return res"
       ],
-      "execution_count": 90,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -141,19 +143,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oa7y_hacdS_X",
-        "outputId": "d1cd2b82-fe82-4880-e059-5c3e219b7bb4"
+        "outputId": "f83ff731-9a9c-4b26-aedc-78825973bb8b"
       },
       "source": [
         "image = imageio.imread(img_url)[:,:,:3]\n",
         "img_height, img_width, img_ch = image.shape\n",
-        "\n",
         "conv_filters = np.full((5, 3, 3, img_ch), 1/9, dtype=float)\n",
         "res = convolution3D(image, conv_filters)\n",
-        "\n",
         "print('Image size: ', image.shape)\n",
         "print('Output size (Convolution): ', res.shape)\n"
       ],
-      "execution_count": 91,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
         "\n",
         "res_ReLU = ReLU(res)\n"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -223,7 +223,7 @@
         "\n",
         "  return result"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -244,7 +244,7 @@
         "\n",
         "print('Output size (MaxPool): ', res.shape)\n"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +288,7 @@
         "\r\n",
         "#   image = cv2.merge((B,G,R))"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     }
   ]
