--- a/lab2_to_check.ipynb
+++ b/lab2_to_check.ipynb
@@ -6,7 +6,7 @@
       "name": "lab2_to_check.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNiyM5z4tQySpo5QLX6E0c5",
+      "authorship_tag": "ABX9TyPVOckrebjfE3dVrUVqCRKy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,6 +110,11 @@
         "id": "ccOXXCb4vdpI"
       },
       "source": [
+        "def kernel_apply(res, filt_width, filt_height, image, filters, i, j, ch):\n",
+        "  for x in range(filt_width):\n",
+        "      for y in range(filt_height):\n",
+        "          res[j][i][ch] += np.dot(image[j+y-1][i+x-1][:], filters[ch][y][x][:])\n",
+        "\n",
         "def convolution3D(image, filters):  \n",
         "    img_height, img_width, img_ch = image.shape\n",
         "    N, filt_height, filt_width, filt_ch = filters.shape\n",
@@ -127,13 +132,11 @@
         "        for i in range(img_width):\n",
         "            for j in range(img_height):\n",
         "                res[j][i][ch] += bias[ch]\n",
-        "                for x in range(filt_width):\n",
-        "                    for y in range(filt_height):\n",
-        "                        res[j][i][ch] += np.dot(image[j+y-1][i+x-1][:], filters[ch][y][x][:])\n",
+        "                kernel_apply(res, filt_width, filt_height, image, filters, i, j, ch)\n",
         "\n",
         "    return res"
       ],
-      "execution_count": 96,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -143,7 +146,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oa7y_hacdS_X",
-        "outputId": "f83ff731-9a9c-4b26-aedc-78825973bb8b"
+        "outputId": "8b822503-9c41-4026-e126-54d9d743acc8"
       },
       "source": [
         "image = imageio.imread(img_url)[:,:,:3]\n",
@@ -153,7 +156,7 @@
         "print('Image size: ', image.shape)\n",
         "print('Output size (Convolution): ', res.shape)\n"
       ],
-      "execution_count": 97,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
