--- a/lab2_to_check.ipynb
+++ b/lab2_to_check.ipynb
@@ -6,7 +6,7 @@
       "name": "lab2_to_check.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPVOckrebjfE3dVrUVqCRKy",
+      "authorship_tag": "ABX9TyP1yLUCgyz9Y4dAUjUNHDWS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,6 +84,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "GzRFNZe2wWMu"
+      },
+      "source": [
+        "def kernel_apply(res, filt_width, filt_height, image, filters, i, j, ch):\r\n",
+        "  for x in range(filt_width):\r\n",
+        "      for y in range(filt_height):\r\n",
+        "          res[j][i][ch] += np.dot(image[j+y-1][i+x-1][:], filters[ch][y][x][:]) # returns the dot product of two arrays"
+      ],
+      "execution_count": 104,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "gB9e9mWJgAMt"
       },
       "source": [
@@ -110,20 +124,13 @@
         "id": "ccOXXCb4vdpI"
       },
       "source": [
-        "def kernel_apply(res, filt_width, filt_height, image, filters, i, j, ch):\n",
-        "  for x in range(filt_width):\n",
-        "      for y in range(filt_height):\n",
-        "          res[j][i][ch] += np.dot(image[j+y-1][i+x-1][:], filters[ch][y][x][:])\n",
-        "\n",
         "def convolution3D(image, filters):  \n",
         "    img_height, img_width, img_ch = image.shape\n",
         "    N, filt_height, filt_width, filt_ch = filters.shape\n",
-        "\n",
         "    size_pad = 2\n",
-        "  \n",
         "    res = np.zeros((img_height, img_width, N), 'uint8')\n",
         "    image = np.pad(image, ((size_pad,size_pad),(size_pad,size_pad),(0,0)), 'constant')\n",
-        "    bias = np.random.sample(5)\n",
+        "    # image = np.pad(image, ((0,0),(0,0),(0,0)), 'constant')\n",
         "    # img_copy = image.copy()\n",
         "\n",
         "    # Corrections : must be summed over ALL channels of the 3x3x3 filter\n",
@@ -131,12 +138,12 @@
         "    for ch in range(N):\n",
         "        for i in range(img_width):\n",
         "            for j in range(img_height):\n",
-        "                res[j][i][ch] += bias[ch]\n",
+        "                res[j][i][ch] += np.random.sample(5)[ch]\n",
         "                kernel_apply(res, filt_width, filt_height, image, filters, i, j, ch)\n",
         "\n",
         "    return res"
       ],
-      "execution_count": 100,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -146,7 +153,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oa7y_hacdS_X",
-        "outputId": "8b822503-9c41-4026-e126-54d9d743acc8"
+        "outputId": "a112da71-82a3-436a-9f31-fc06d359345f"
       },
       "source": [
         "image = imageio.imread(img_url)[:,:,:3]\n",
@@ -156,7 +163,7 @@
         "print('Image size: ', image.shape)\n",
         "print('Output size (Convolution): ', res.shape)\n"
       ],
-      "execution_count": 101,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
