Useless code removed

--- a/lab2_to_check.ipynb
+++ b/lab2_to_check.ipynb
@@ -6,7 +6,7 @@
       "name": "lab2_to_check.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP1yLUCgyz9Y4dAUjUNHDWS",
+      "authorship_tag": "ABX9TyOYRBaugSJBTwsHIrNVTK3q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
           "height": 265
         },
         "id": "W_UyhiVc-qGH",
-        "outputId": "37db2943-ffe9-4096-9029-0a6b246fce75"
+        "outputId": "40558deb-332d-4495-e80a-fdb54caf63d9"
       },
       "source": [
         "import torch, matplotlib\n",
@@ -57,7 +57,7 @@
         "  \n",
         "display_image(img)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,9 +90,9 @@
         "def kernel_apply(res, filt_width, filt_height, image, filters, i, j, ch):\r\n",
         "  for x in range(filt_width):\r\n",
         "      for y in range(filt_height):\r\n",
-        "          res[j][i][ch] += np.dot(image[j+y-1][i+x-1][:], filters[ch][y][x][:]) # returns the dot product of two arrays"
+        "          res[j][i][ch] += np.dot(filters[ch][y][x][:], image[j+y-1][i+x-1][:]) # returns the dot product of two arrays"
       ],
-      "execution_count": 104,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
         "# \t\ti = i + 1\n",
         "# \treturn sum\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
         "\n",
         "    return res"
       ],
-      "execution_count": 107,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oa7y_hacdS_X",
-        "outputId": "a112da71-82a3-436a-9f31-fc06d359345f"
+        "outputId": "3eb78330-5043-43cb-b520-2fd5997ae97f"
       },
       "source": [
         "image = imageio.imread(img_url)[:,:,:3]\n",
@@ -163,7 +163,7 @@
         "print('Image size: ', image.shape)\n",
         "print('Output size (Convolution): ', res.shape)\n"
       ],
-      "execution_count": 108,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,6 +174,17 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bUP1Z_KgH_xC"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -239,11 +250,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7GlkM7fW5F7U",
-        "outputId": "7bf2d9bd-e896-4db1-aa78-d47d04f6062e"
+        "id": "7GlkM7fW5F7U"
       },
       "source": [
         "print('Original size: ', res_ReLU.shape)\n",
@@ -255,16 +262,7 @@
         "print('Output size (MaxPool): ', res.shape)\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Original size:  (588, 786, 5)\n",
-            "Output size (MaxPool):  (294, 393, 5)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -274,32 +272,6 @@
       "source": [
         ""
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_X7zAisYVJZn"
-      },
-      "source": [
-        "# for k in range(5):\r\n",
-        "#   f = np.array([[1/9,1/9,1/9],[1/9,1/9,1/9],[1/9,1/9,1/9]])[..., None]  # Sobel filter kernel\r\n",
-        "\r\n",
-        "#   # 2D filter to a 3D filter\r\n",
-        "#   img_filter_3d = np.repeat(f, 3, axis=2)\r\n",
-        "\r\n",
-        "#   # image in RGB => (3,3,3)\r\n",
-        "#   R = image[:,:,0].copy()\r\n",
-        "#   G = image[:,:,1].copy()\r\n",
-        "#   B = image[:,:,2].copy()\r\n",
-        "\r\n",
-        "#   R = convolution3D(R, img_filter_3d[0])\r\n",
-        "#   G = convolution3D(G, img_filter_3d[1])\r\n",
-        "#   B = convolution3D(B, img_filter_3d[2])\r\n",
-        "\r\n",
-        "#   image = cv2.merge((B,G,R))"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
